--- a/app/src/main/res/layout/list_item_medication_history.xml
+++ b/app/src/main/res/layout/list_item_medication_history.xml
@@ -17,7 +17,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginRight="@dimen/medium"
-        android:backgroundTint="@color/mediumLightIcon"
+        android:backgroundTint="@color/colorPrimaryDark"
         android:background="@drawable/ic_medicine"/>
 
     <TextView
