Add autocomplete medicine names using the web service

--- a/app/src/main/res/layout/fragment_add_medicine.xml
+++ b/app/src/main/res/layout/fragment_add_medicine.xml
@@ -16,7 +16,7 @@
             android:layout_marginTop="@dimen/large"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-            <EditText
+            <AutoCompleteTextView
                 android:id="@+id/etMedicineName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
