--- a/app/src/main/res/layout/activity_editprofile.xml
+++ b/app/src/main/res/layout/activity_editprofile.xml
@@ -138,35 +138,35 @@
         </LinearLayout>
         // height
 
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/input_layout_profile_height"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingLeft="16dp"
-            android:paddingTop="14dp">
-            <EditText
-                android:hint="Height"
-                android:text="6'10'"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/editT_height"/>
-        </android.support.design.widget.TextInputLayout>
+        <!--<android.support.design.widget.TextInputLayout-->
+            <!--android:id="@+id/input_layout_profile_height"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:paddingLeft="16dp"-->
+            <!--android:paddingTop="14dp">-->
+            <!--<EditText-->
+                <!--android:hint="Height"-->
+                <!--android:text="6'10'"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:id="@+id/editT_height"/>-->
+        <!--</android.support.design.widget.TextInputLayout>-->
 
         // weight
 
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/input_layout_profile_weight"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingLeft="16dp"
-            android:paddingTop="14dp">
-            <EditText
-                android:hint="Weight"
-                android:text="78KG"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/editT_weight"/>
-        </android.support.design.widget.TextInputLayout>
+        <!--<android.support.design.widget.TextInputLayout-->
+            <!--android:id="@+id/input_layout_profile_weight"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:paddingLeft="16dp"-->
+            <!--android:paddingTop="14dp">-->
+            <!--<EditText-->
+                <!--android:hint="Weight"-->
+                <!--android:text="78KG"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:id="@+id/editT_weight"/>-->
+        <!--</android.support.design.widget.TextInputLayout>-->
 
         // phoneNumber
 
