--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -101,35 +101,35 @@
             </RadioGroup>
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/medium"
-            android:orientation="horizontal">
+        <!--<LinearLayout-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_marginTop="@dimen/medium"-->
+            <!--android:orientation="horizontal">-->
 
-            <android.support.design.widget.TextInputLayout
-                android:id="@+id/input_layout_weight"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight=".33">
-                <EditText
-                    android:id="@+id/etWeight"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:hint="Weight (lb)" />
-            </android.support.design.widget.TextInputLayout>
-            <android.support.design.widget.TextInputLayout
-                android:id="@+id/input_layout_height"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight=".33">
-                <EditText
-                    android:id="@+id/etHeight"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:hint="Height (in)" />
-            </android.support.design.widget.TextInputLayout>
-        </LinearLayout>
+            <!--<android.support.design.widget.TextInputLayout-->
+                <!--android:id="@+id/input_layout_weight"-->
+                <!--android:layout_width="0dp"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_weight=".33">-->
+                <!--<EditText-->
+                    <!--android:id="@+id/etWeight"-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="match_parent"-->
+                    <!--android:hint="Weight (lb)" />-->
+            <!--</android.support.design.widget.TextInputLayout>-->
+            <!--<android.support.design.widget.TextInputLayout-->
+                <!--android:id="@+id/input_layout_height"-->
+                <!--android:layout_width="0dp"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_weight=".33">-->
+                <!--<EditText-->
+                    <!--android:id="@+id/etHeight"-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="match_parent"-->
+                    <!--android:hint="Height (in)" />-->
+            <!--</android.support.design.widget.TextInputLayout>-->
+        <!--</LinearLayout>-->
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/input_layout_age"
