--- a/app/src/main/res/layout/list_item_vital_signs_history.xml
+++ b/app/src/main/res/layout/list_item_vital_signs_history.xml
@@ -4,20 +4,37 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="@dimen/medium">
-<TextView
+
+    <ImageView
+        android:id="@+id/ivVitalSigns"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/ic_menu_vital_signs"
+        android:backgroundTint="@color/googleRed"
+        android:padding="@dimen/small"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="14dp"/>
+
+    <TextView
         android:id="@+id/tvXLVSHId"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="1"
-        android:visibility="gone" />
+        android:visibility="gone"
+        android:layout_alignParentStart="true"/>
 
-<TextView
-    android:id="@+id/tvXLVSHDate"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="Medicine Names"
-    android:textColor="@color/colorPrimaryText"
-    android:textSize="20dp"/>
+    <TextView
+        android:id="@+id/tvXLVSHDate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Medicine Names"
+        android:textColor="@color/colorPrimaryText"
+        android:textSize="16dp"
+        android:layout_marginStart="20dp"
+        android:layout_alignBottom="@+id/ivVitalSigns"
+        android:layout_toEndOf="@+id/ivVitalSigns"/>
+
 
 
 
