--- a/app/src/main/res/layout/list_item_vital_signs_history.xml
+++ b/app/src/main/res/layout/list_item_vital_signs_history.xml
@@ -2,40 +2,51 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:id="@+id/current_medication_list_item"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="@dimen/medium">
+                android:layout_height="60dp"
+                android:padding="@dimen/medium"
+                android:visibility="visible"
+                xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <ImageView
         android:id="@+id/ivVitalSigns"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="15dp"
         android:background="@drawable/ic_menu_vital_signs"
         android:backgroundTint="@color/googleRed"
         android:padding="@dimen/small"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="14dp"/>
+        android:layout_centerVertical="true"
+        android:layout_alignParentStart="true"/>
 
     <TextView
         android:id="@+id/tvXLVSHId"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
         android:text="1"
-        android:visibility="gone"
-        android:layout_alignParentStart="true"/>
+        android:visibility="gone"/>
 
     <TextView
         android:id="@+id/tvXLVSHDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="12dp"
         android:text="Medicine Names"
         android:textColor="@color/colorPrimaryText"
         android:textSize="16dp"
-        android:layout_marginStart="20dp"
-        android:layout_alignBottom="@+id/ivVitalSigns"
+        android:layout_centerVertical="true"
         android:layout_toEndOf="@+id/ivVitalSigns"/>
 
-
-
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/add_medication_fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end|bottom"
+        app:srcCompat="@drawable/ic_fab_add"
+        android:layout_marginLeft="@dimen/fab_margin"
+        android:layout_marginRight="@dimen/fab_margin"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="29dp"/>
 
 </RelativeLayout>
