--- a/app/src/main/res/layout/fragment_vital_signs.xml
+++ b/app/src/main/res/layout/fragment_vital_signs.xml
@@ -3,7 +3,7 @@
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
-             tools:context="com.along.android.healthmanagement.fragments.VitalSignsFragment">
+             tools:context="com.along.android.healthmanagement.fragments.VitalSignTabFragment">
     <TextView
         android:id="@+id/tvVSEmptyMsg"
         android:layout_width="match_parent"
