--- a/app/src/main/res/layout/list_item_vital_signs_history.xml
+++ b/app/src/main/res/layout/list_item_vital_signs_history.xml
@@ -9,35 +9,45 @@
                 xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
-    <TextView
-        android:id="@+id/tvXLVSHId"
-        android:layout_width="match_parent"
+    <LinearLayout
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:text="1"
-        android:visibility="gone"/>
+        android:layout_weight=".5"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:paddingTop="@dimen/medium">
 
-    <ImageView
-        android:id="@+id/ivVitalSigns"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
-        android:background="@drawable/ic_menu_vital_signs"
-        android:backgroundTint="@color/googleRed"
-        android:padding="@dimen/small"
-        android:layout_centerVertical="true"
-        android:layout_alignParentStart="true"/>
+        <TextView
+            android:id="@+id/tvXLVSHId"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:text="1"
+            android:visibility="gone"/>
 
-    <TextView
-        android:id="@+id/tvXLVSHDate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
-        android:text="Medicine Names"
-        android:textColor="@color/colorPrimaryText"
-        android:textSize="16dp"
-        android:layout_centerVertical="true"
-        android:layout_toEndOf="@+id/ivVitalSigns"/>
+        <ImageView
+            android:id="@+id/ivVitalSigns"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="15dp"
+            android:background="@drawable/ic_menu_vital_signs"
+            android:backgroundTint="@color/googleRed"
+            android:padding="@dimen/small"
+            android:layout_centerVertical="true"
+            android:layout_alignParentStart="true"/>
+
+        <TextView
+            android:id="@+id/tvXLVSHDate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="12dp"
+            android:text="Medicine Names"
+            android:textColor="@color/colorPrimaryText"
+            android:textSize="16dp"
+            android:layout_centerVertical="true"
+            android:layout_toEndOf="@+id/ivVitalSigns"/>
+    </LinearLayout>
+
 
 
     <LinearLayout
